Fri May 01 12:26:08 GMT 2015  Olly Betts <olly@survex.com>

	* configure.ac: Remove unused probe for <stdint.h>.

Fri Dec 05 10:37:28 GMT 2014  Olly Betts <olly@survex.com>

	* docs/letor.rst,ranker.cc,ranker.h: Fix typos reported by Veres Lajos.

Fri Mar 07 00:37:25 GMT 2014  VcmaX <vcamx3@gmail.com>

	* HACKING: Note packages to install from homebrew on Mac OS X.

Mon Mar 03 23:32:11 GMT 2014  Olly Betts <olly@survex.com>

	* docs/Makefile.am: Process RST docs with --math-output=HTML as that
	  works with rst2html 0.8.x and produces HTML which should work with
	  more browsers (though looks less nice).

Mon Mar 03 23:30:34 GMT 2014  Mayank Chaudhary <mayankchaudhary.iitr@gmail.com>

	* docs/letor.rst: Convert equations in rst docs to use LaTeX via the
	  math role and directive.

Wed May 08 11:07:56 GMT 2013  Olly Betts <olly@survex.com>

	* Makefile.am,docs/Makefile.am: SVN -> git.

Thu May 17 12:12:55 GMT 2012  Olly Betts <olly@survex.com>

	* letor_internal.h: Minor whitespace tweaks.

Thu May 17 03:37:32 GMT 2012  Olly Betts <olly@survex.com>

	* letor_internal.cc: Sort out header includes.

Thu May 17 00:58:18 GMT 2012  Olly Betts <olly@survex.com>

	* letor_internal.cc: More whitespace fettling.

Thu May 17 00:57:17 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am,configure.ac: Add configure checks for libsvm.

Wed May 16 14:58:58 GMT 2012  Olly Betts <olly@survex.com>

	* letor_internal.h: Remove unused '#include <list>'.

Wed May 16 14:57:37 GMT 2012  Olly Betts <olly@survex.com>

	* letor_internal.h: Add header multiple include guard.

Wed May 16 13:32:18 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/letor.h: Fix typos.

Wed May 16 13:28:58 GMT 2012  Olly Betts <olly@survex.com>

	* include/xapian/letor.h,letor.cc,letor_internal.cc,letor_internal.h:
	  Use Xapian::doccount for msetsize.

Wed May 16 12:50:55 GMT 2012  Olly Betts <olly@survex.com>

	* letor_internal.cc: Prefer ++x to x++.
